--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -1,6 +1,31 @@
+<!DOCTYPE html>
+
 <html>
     <head>
 	<title>Doug's Book Login</title>
+	<link href="css/login.css" type="text/css" rel="stylesheet"/>
     </head>
+    <body>
+	<div id="page">
+	    <header>
+		<h1>Insert Logo Here</h1>
+	    </header>
+
+	    <form action="tbi.php(?)" method="post">
+		<fieldset>
+		    <legend>Login</legend>
+		    <label>Username <br />
+			<input id="username" name="username" type="text" />
+		    </label> <br />
+		    <label>Password <br />
+			<input id="password" name="password" type="password" />
+		    </label> <br />
+		    <a href="forgot_password.html">Forgot password?</a>
+		    <input type="submit" name="submit" value="Login" />
+		</fieldset>
+	    </form>
+	</div>
+    </body>
+</html>
 
 
