--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -3,27 +3,39 @@
 <html>
     <head>
 	<title>Doug's Book Login</title>
-	<link href="css/login.css" type="text/css" rel="stylesheet"/>
+	<link href="../css/login.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
+	<header>
+	    Insert Logo Here
+	</header>
 	<div id="page">
-	    <header>
-		<h1>Insert Logo Here</h1>
-	    </header>
+	    <div class="form">
+		<form action="tbi.php(?)" method="post">
+		    <fieldset>
+			<div class="title">
+			    <b>Sign In</b>
+			</div>
+			<div class="boxcontent">
+			    <div class="textbox">
+				<label>Username</label> <br>
+				<input id="username" name="username" type="text" />
+			    </div>
+			    <div class="textbox">
+				<label>Password</label> <br>
+				<input id="password" name="password" type="password" />
+			    </div>
+			    <a href="forgot_password.html">Forgot password?</a>
+			    <input type="submit" name="submit" value="Login" />
+			</div>
+		    </fieldset>
+		</form>
+	    </div>
+	    <div class="create">
+		<h3>Don't have an account?</h3>
+		<a href="createAccount.html"><b>Create Account</b></a>
+	    </div>
 
-	    <form action="tbi.php(?)" method="post">
-		<fieldset>
-		    <legend>Login</legend>
-		    <label>Username <br />
-			<input id="username" name="username" type="text" />
-		    </label> <br />
-		    <label>Password <br />
-			<input id="password" name="password" type="password" />
-		    </label> <br />
-		    <a href="forgot_password.html">Forgot password?</a>
-		    <input type="submit" name="submit" value="Login" />
-		</fieldset>
-	    </form>
 	</div>
     </body>
 </html>
