Added page_layout.css stylesheet for increased cohesivness in style. Finished basic createAccount.html strcuture.

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -4,6 +4,7 @@
     <head>
 	<title>Doug's Book Login</title>
 	<link href="../css/login.css" type="text/css" rel="stylesheet"/>
+	<link href="../css/page_layout.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
 	<header>
