--- a/frontend/html/createAccount.html
+++ b/frontend/html/createAccount.html
@@ -13,7 +13,7 @@
 	</header>
 	<div id="page">
 	    <div class="form">
-		<form action="tbi.php(?)" method="post" onsubmit="formValidate()">
+		<form action="tbi.php(?)" method="post" onsubmit="return formValidate()">
 		    <fieldset>
 			<div class="formheading">
 			    Create Account
