Added forgotPasswordUsernameInput screen; styling finished

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -26,7 +26,7 @@
 				<label>Password</label> <br>
 				<input id="password" name="password" type="password" />
 			    </div>
-			    <a href="forgot_password.html">Forgot password?</a>
+			    <a href="forgotPasswordUsernameInput.html">Forgot password?</a>
 			    <input type="submit" name="submit" value="Login" />
 			</div>
 		    </fieldset>
