--- a/src/main/resources/public/html/login.html
+++ b/src/main/resources/public/html/login.html
@@ -12,7 +12,7 @@
 	</header>
 	<div id="page">
 	    <div class="form">
-		<form action="tbi.php(?)" method="post">
+		<form action="/login" method="post">
 		    <fieldset>
 			<div class="title">
 			    <b>Sign In</b>
