More styling changes to the main page; button is styled

--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -28,11 +28,11 @@
 	</nav>
 
 	<div id="page">
-	    <div class="forumButtons">
-		<button type="button" onclick="post.html">Make Post</button>
+	    <div class="forumbuttons">
+		<button type="button" onclick="post.html">Create Post</button>
 	    </div>
 
-	    <div class="forumTable">
+	    <div id="forumTable" class="forumTable">
 		<table>
 		    <thead>
 			<tr>
