Added reply button to postView, and added postViewReply page

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -46,6 +46,7 @@
 		<div id="replies">
 		    <div id="repliestitle">
 			Replies
+			<button type="button" class="reply">Write a Reply</button>
 		    </div>
 		    <div id="repliescontent">
 			<div class="reply">
