minor change and dummy setting in the script

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -61,9 +61,7 @@
 				</div>
 			</div>
 -->
-			<script type="text/javascript" src="../js/postView-general.js">
-				createReplyView();
-			</script>
+			<script type="text/javascript" src="../js/postView-general.js"></script>
 
 <!--
 			<div id="replies">
