Updated items to deal with data base.

--- a/src/main/resources/public/html/createAccount.html
+++ b/src/main/resources/public/html/createAccount.html
@@ -13,7 +13,7 @@
 	</header>
 	<div id="page">
 	    <div class="form">
-		<form action="tbi.php(?)" method="post" onsubmit="return formValidate()">
+		<form action="/createaccount" method="post" onsubmit="return formValidate()">
 		    <fieldset>
 			<div class="formheading">
 			    Create Account
