changed create post button

--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -40,7 +40,7 @@
 			    </div>
 			</div>
 			<div class="buttons">
-			    <button type="button">Cancel</button>
+			    <button type="button" onclick="window.history.back();">Cancel</button>
 			    <input type="submit" value="Post">
 			</div>
 		    </fieldset>
