--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -29,7 +29,7 @@
 
 	<div id="page">
 	    <div class="forumbuttons">
-		<button type="button" onclick="post.html">Create Post</button>
+		<button type="button" onclick="window.location.href = 'createPost.html';">Create Post</button>
 	    </div>
 
 	    <div id="forumTable" class="forumTable">
