--- a/src/main/resources/public/html/createAccount.html
+++ b/src/main/resources/public/html/createAccount.html
@@ -3,9 +3,9 @@
 <html>
     <head>
 	<title>Doug's Book Account Creation</title>
-	<link href="../css/createAccount.css" type="text/css" rel="stylesheet" />
-	<link href="../css/page_layout.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="../js/createAccount.js"></script>
+	<link href="/css/createAccount.css" type="text/css" rel="stylesheet" />
+	<link href="/css/page_layout.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="/js/createAccount.js"></script>
     </head>
     <body>
 	<header>
