--- a/src/main/resources/public/html/login.html
+++ b/src/main/resources/public/html/login.html
@@ -3,8 +3,8 @@
 <html>
     <head>
 	<title>Doug's Book Login</title>
-	<link href="../css/login.css" type="text/css" rel="stylesheet"/>
-	<link href="../css/page_layout.css" type="text/css" rel="stylesheet"/>
+	<link href="/css/login.css" type="text/css" rel="stylesheet"/>
+	<link href="/css/page_layout.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
 	<header>
@@ -26,7 +26,7 @@
 				<label>Password</label> <br>
 				<input id="password" name="password" type="password" />
 			    </div>
-			    <a href="forgotPasswordUsernameInput.html">Forgot password?</a>
+			    <a href="/forgotpassword">Forgot password?</a>
 			    <input type="submit" name="submit" value="Login" />
 			</div>
 		    </fieldset>
@@ -34,7 +34,7 @@
 	    </div>
 	    <div class="create">
 		<h3>Don't have an account?</h3>
-		<a href="createAccount.html"><b>Create Account</b></a>
+		<a href="/createaccount"><b>Create Account</b></a>
 	    </div>
 
 	</div>
