Fixed more links

--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -8,8 +8,8 @@
 <html>
     <head>
 	<title>Create Post</title>
-	<link href="../css/page_layout.css" type="text/css" rel="stylesheet" />
-	<link href="../css/createPost.css" type="text/css" rel="stylesheet" />
+	<link href="/css/page_layout.css" type="text/css" rel="stylesheet" />
+	<link href="/css/createPost.css" type="text/css" rel="stylesheet" />
 	<script type="text/javascript" src="../js/createPost.js"></script>
     </head>
     <body>
@@ -18,7 +18,7 @@
 	</header>
 	<div class="page">
 	    <div class="form">
-		<form action="tbi.php(?)" method="post">
+		<form action="/createpost" method="post">
 		    <fieldset>
 			<div class="formheading">
 			    Create Post
