--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -10,7 +10,7 @@
 	<title>Create Post</title>
 	<link href="/css/page_layout.css" type="text/css" rel="stylesheet" />
 	<link href="/css/createPost.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="../js/createPost.js"></script>
+	<script type="text/javascript" src="/js/createPost.js"></script>
     </head>
     <body>
 	<header>
