--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -24,7 +24,8 @@
                 }
             </script>
 	    <a href="account.html">My Account</a>
-	    <a href="main.html">Home</a>
+		<a href="main.html">Home</a>
+		<a href="/logout">Log Out</a>
 	</nav>
 
 	<div id="page">
