added log out button in all major pages

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -25,7 +25,8 @@
 			}
 		</script>
 	    <a href="accountMgmt.html">My Account</a>
-	    <a href="main.html">Home</a>
+		<a href="main.html">Home</a>
+		<a href="/logout">Log Out</a>
 	</nav>
 
 	<div id="page">
