--- a/src/main/resources/public/html/postViewReply.html
+++ b/src/main/resources/public/html/postViewReply.html
@@ -12,7 +12,8 @@
 	<nav>
 	    <a href="admin.html">Admin Mode</a> <!--Gonna need some javascript here to see for admin -->
 	    <a href="accountMgmt.html">My Account</a>
-	    <a href="main.html">Home</a>
+		<a href="main.html">Home</a>
+		<a href="/logout">Log Out</a>
 	</nav>
 
 	<div id="page">
