given classes to nav bar buttons

--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -10,22 +10,23 @@
             <!-- header buttons -->
             <script>
                 //get this variable's value from server
-                let somebool = true;
+                let somebool = false;
                 if(somebool == true) {
                     let adminButton = document.createElement("a");
 		    let adminText = document.createTextNode("Admin Mode");
 		    adminButton.appendChild(adminText);
 
 		    adminButton.classname = 'adminButton';
-		    adminButton.setAttribute('href', 'admin.html');
+			adminButton.setAttribute('href', 'admin.html');
+			adminButton.setAttribute('class', 'other');
 
 		    let nav = document.getElementsByTagName('nav')[0];
 		    nav.appendChild(adminButton);
                 }
             </script>
-	    <a href="account.html">My Account</a>
-		<a href="main.html">Home</a>
-		<a href="/logout">Log Out</a>
+	    <a href="account.html" class="other">My Account</a>
+		<a href="main.html" class="other">Home</a>
+		<a href="/logout" class="logout">Log Out</a>
 	</nav>
 
 	<div id="page">
