--- a/src/main/resources/public/html/postViewReply.html
+++ b/src/main/resources/public/html/postViewReply.html
@@ -10,10 +10,25 @@
 	    Doug's Book
 	</header>
 	<nav>
-	    <a href="admin.html">Admin Mode</a> <!--Gonna need some javascript here to see for admin -->
-	    <a href="accountMgmt.html">My Account</a>
-		<a href="main.html">Home</a>
-		<a href="/logout">Log Out</a>
+		<script>
+			//get this variable's value from server
+			let somebool = false;
+			if(somebool == true) {
+				let adminButton = document.createElement("a");
+				let adminText = document.createTextNode("Admin Mode");
+				adminButton.appendChild(adminText);
+
+				adminButton.classname = 'adminButton';
+				adminButton.setAttribute('href', 'admin.html');
+				adminButton.setAttribute('class', 'other');
+
+				let nav = document.getElementsByTagName('nav')[0];
+				nav.appendChild(adminButton);
+			}
+		</script>
+	    <a href="accountMgmt.html" class="other">My Account</a>
+		<a href="main.html" class="other">Home</a>
+		<a href="/logout" class="logout">Log Out</a>
 	</nav>
 
 	<div id="page">
