abled reply block

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -67,11 +67,11 @@
 
 
 			<div id="replies">
+				<!--
 				<div id="repliestitle">
 				Replies
-				<button type="button" class="reply">Write a Reply</button>
+				<button type="button" class="reply" href="/postViewReply">Write a Reply</button>
 				</div>
-				<!--
 				<div id="repliescontent">
 					<div class="reply">
 						<div class="replier">
