Changed post reply

--- a/src/main/resources/public/html/postViewReply.html
+++ b/src/main/resources/public/html/postViewReply.html
@@ -51,7 +51,7 @@
 		<script type="text/javascript" src="../js/postReply.js"></script>
 
 		<div id="replyform">
-		    <form action="/postreply" method="post">
+		    <form action="/postViewReply" method="post">
 			<fieldset>
 			    <div class="formheading">
 				Write a reply
