Added replyArea to the html so replies appear.

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -64,7 +64,10 @@
 			</div>
 -->
 			<script type="text/javascript" src="../js/postView-general.js"></script>
-
+			
+			<div id="replyArea">
+			</div>
+			
 <!--
 			<div id="replies">
 				
