Added site-wide logo-banner

--- a/src/main/resources/public/html/createAccount.html
+++ b/src/main/resources/public/html/createAccount.html
@@ -3,20 +3,19 @@
 <html>
     <head>
 	<title>Doug's Book Account Creation</title>
-	<link href="/css/createAccount.css" type="text/css" rel="stylesheet" />
-	<link href="/css/page_layout.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="/js/createAccount.js"></script>
+	<link href="../css/createAccount.css" type="text/css" rel="stylesheet" />
+	<link href="../css/page_layout.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="../js/createAccount.js"></script>
     </head>
     <body>
 	<header>
-	    Insert Logo Here
+	    <img src="../banner1.png"/>
 	</header>
 	<div id="page">
 	    <div class="form">
 		<form action="/createaccount" method="post" onsubmit="return formValidate()">
 		    <fieldset>
 			<div class="formheading">
-			    Create Account
 			</div>
 			<div class="formsubheading">
 			    Personal Information
