--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -8,13 +8,13 @@
 <html>
     <head>
 	<title>Create Post</title>
-	<link href="/css/page_layout.css" type="text/css" rel="stylesheet" />
-	<link href="/css/createPost.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="/js/createPost.js"></script>
+	<link href="../css/page_layout.css" type="text/css" rel="stylesheet" />
+	<link href="../css/createPost.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="../js/createPost.js"></script>
     </head>
     <body>
 	<header>
-	    Insert Logo Here
+	    <img src="../banner1.png">
 	</header>
 	<div class="page">
 	    <div class="form">
