--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -5,7 +5,9 @@
         <link href="../css/main.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <header>Doug's Book</header>
+        <header>
+	    <img src="../banner1.png">
+	</header>
 	<nav>
             <!-- header buttons -->
             <script>
