--- a/src/main/resources/public/html/forgotPasswordReset.html
+++ b/src/main/resources/public/html/forgotPasswordReset.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 	<header>
-	    Doug's Book
+	    <img src="../banner1.png">
 	</header>
 	<div id="page">
 	    <div class="form">
