--- a/src/main/resources/public/html/forgotPasswordUsernameInput.html
+++ b/src/main/resources/public/html/forgotPasswordUsernameInput.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 	<header>
-	    Insert Logo Here
+	    <img src="../banner1.png">
 	</header>
 	<div id="page">
 	    <div class="form">
