--- a/src/main/resources/public/html/login.html
+++ b/src/main/resources/public/html/login.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 	<header>
-	    Insert Logo Here
+	    <img src="../banner1.png">
 	</header>
 	<div id="page">
 	    <div class="form">
