--- a/src/main/resources/public/html/forgotPasswordUsernameInput.html
+++ b/src/main/resources/public/html/forgotPasswordUsernameInput.html
@@ -10,7 +10,7 @@
 	</header>
 	<div id="page">
 	    <div class="form">
-		<form action="tbi.php(?)" method="post">
+		<form action="/forgotpassword" method="post">
 		    <fieldset>
 			<div class="formheading">
 			    Recover Password - Enter Username
