changed cancel button in reset and unsername input pages

--- a/src/main/resources/public/html/forgotPasswordReset.html
+++ b/src/main/resources/public/html/forgotPasswordReset.html
@@ -32,7 +32,7 @@
 			    </div>
 			</div>
 			<div class="buttons" style="margin-bottom: 0;">
-			    <a href="login.html">Cancel</a><input type="submit" value="Reset">
+			    <a href="/cancel">Cancel</a><input type="submit" value="Reset">
 			</div>
 		    </fieldset>
 		</form>
