--- a/src/main/resources/public/html/postViewReply.html
+++ b/src/main/resources/public/html/postViewReply.html
@@ -4,6 +4,9 @@
 	<link href="../css/page_layout.css" type="text/css" rel="stylesheet">
 	<link href="../css/postView.css" type="text/css" rel="stylesheet">
 	<link href="../css/postViewReply.css" type="text/css" rel="stylesheet">
+	<script src="../js/BBCode/Editor/sceditor-2.1.2/minified/sceditor.min.js"></script>
+	<script src="../js/BBCode/Editor/sceditor-2.1.2/minified/formats/bbcode.js"></script>
+	<script src="../js/BBCode/Editor/sceditor-2.1.2/minified/icons/monocons.js"></script>
     </head>
     <body>
 	<header>
