--- a/src/main/resources/public/html/forgotPasswordReset.html
+++ b/src/main/resources/public/html/forgotPasswordReset.html
@@ -16,9 +16,27 @@
 			<div class="formheading">
 			    Forgot Password --- Reset
 			</div>
-			<div class="formsubheading">
-			    For user: <span style="font-size:90%;font-weight:bold;font-style:italic;">insert_username_here</span>
+			<div class="formsubheading" id="formsubheading">
 			</div>
+			<script>
+				let username = "";
+				let xhttp = new XMLHttpRequest();
+				xhttp.onreadystatechange = function() {
+        			if(this.readyState == 4 && this.status == 200) {
+						let usernameS = document.createElement("span");
+						usernameS.setAttribute("style", "font-size:90%;font-weight:bold;font-style:italic;");
+						username = JSON.parse(this.responseText).username;
+						usernameS.innerHTML = username;
+						let usernameA = document.getElementById("formsubheading");
+						usernameA.innerHTML = "For user: ";
+						usernameA.appendChild(usernameS);
+       				}
+				};
+				
+				xhttp.open("GET", "/api/security", TRUE);
+				xhttp.send();
+				
+			</script>
 			<div class="formcontent">
 			    <div class="textbox">
 				<label>New Password <span style="font-size: 75%;">(8 character minimum)</span></label> <br />
