Made it so all links work properly

--- a/src/main/resources/public/html/forgotPasswordUsernameInput.html
+++ b/src/main/resources/public/html/forgotPasswordUsernameInput.html
@@ -22,7 +22,7 @@
 			    </div>
 			</div>
 			<div class="buttons">
-			    <a href="/cancel">Cancel</a><input type="submit" value="Recover">
+			    <a href="/forgotpassword/cancel">Cancel</a><input type="submit" value="Recover">
 			</div>
 		    </fieldset>
 		</form>
