--- a/src/main/resources/public/html/forgotPasswordReset.html
+++ b/src/main/resources/public/html/forgotPasswordReset.html
@@ -11,7 +11,7 @@
 	</header>
 	<div id="page">
 	    <div class="form">
-		<form action="reset(?)" method="post(?)" onsubmit="return formValidate();">
+		<form action="/forgotpassword" method="post" onsubmit="return formValidate();">
 		    <fieldset>
 			<div class="formheading">
 			    Forgot Password --- Reset
@@ -32,7 +32,7 @@
 			    </div>
 			</div>
 			<div class="buttons" style="margin-bottom: 0;">
-			    <a href="/cancel">Cancel</a><input type="submit" value="Reset">
+			    <a href="/forgotpassword/cancel">Cancel</a><input type="submit" value="Reset">
 			</div>
 		    </fieldset>
 		</form>
