More changes to the myProfile

--- a/src/main/resources/public/html/myProfile.html
+++ b/src/main/resources/public/html/myProfile.html
@@ -40,7 +40,8 @@
 		    </table>
 		</div>
 		<div class="inner1em">
-		    <h3>Bio <button id="editbutton" type="button">Edit</button></h3>
+		    <h3>Bio <button id="savebutton" type="button">Save</button><button id="editbutton" type="button">Edit</button><button id="cancelbutton"
+									 type="button">Cancel</button></h3>
 		    <div id="biotext">
 			At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 			deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
