--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -18,10 +18,8 @@
 	<header>
 	    <img src="../banner1.png">
 	</header>
-	<nav>
-	    <a href="main.html" class="other">Home</a>
-	    <a href="account.html" class="other">My Account</a>
-	    <a href="/logout" class="logout">Log Out</a>
+	<nav id="navbar">
+	    <script src="navbar.js"></script>
 	</nav>
 	<div class="page">
 	    <div class="form">
