--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -9,26 +9,8 @@
 	<header>
 	    <img src="../banner1.png">
 	</header>
-	<nav>
-	    <script>
-			//get this variable's value from server
-			let somebool = false;
-			if(somebool == true) {
-				let adminButton = document.createElement("a");
-				let adminText = document.createTextNode("Admin Mode");
-				adminButton.appendChild(adminText);
-
-				adminButton.classname = 'adminButton';
-				adminButton.setAttribute('href', 'admin.html');
-				adminButton.setAttribute('class', 'other');
-
-				let nav = document.getElementsByTagName('nav')[0];
-				nav.appendChild(adminButton);
-			}
-		</script>
-	    <a href="accountMgmt.html" class="other">My Account</a>
-		<a href="main.html" class="other">Home</a>
-		<a href="/logout" class="logout">Log Out</a>
+	<nav id="navbar">
+	    <script src="../js/navbar.js"></script>
 	</nav>
 
 	<div id="page">
