changed include order in post view page

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -3,7 +3,6 @@
 	<title>Doug's Book</title>
 	<link href="../css/page_layout.css" type="text/css" rel="stylesheet"/>
 	<link href="../css/postView.css" type="text/css" rel="stylesheet"/>
-	<script src="../js/BBCode/Parser/build/bbCodeParser.min.js"></script>
     </head>
     <body>
 	<header>
@@ -45,8 +44,9 @@
 				that. Can someone help me please?<br>Thanks</br></p>
 				</div>
 			</div>
--->
+-->			<script src="../js/BBCode/Parser/build/bbCodeParser.min.js"></script>
 			<script type="text/javascript" src="../js/postView-general.js"></script>
+			
 			
 			<div id="replyArea">
 			</div>
