Fixed minor bug in myProfile page

--- a/src/main/resources/public/html/myProfile.html
+++ b/src/main/resources/public/html/myProfile.html
@@ -62,7 +62,7 @@
 		    <h3>Password <input type="submit" form="changepasswordform" value="Change"><button
 			    id="changepasswordbutton" type="button">Change Password</button><button
 				 id="cancelchangepasswordbutton" type="button">Cancel</button></h3>
-		    <form id="changepasswordform" action="changepassword.php(?)" onsubmit="return changePasswordValidate()">
+		    <form id="changepasswordform" action="changepassword.php(?)">
 			<div class="formcontent">
 			    <div class="textbox">
 				<label>Current Password</label><br>
