--- a/src/main/resources/public/html/postViewReply.html
+++ b/src/main/resources/public/html/postViewReply.html
@@ -14,7 +14,7 @@
 	    <img src="../banner1.png">
 	</header>
 	<nav id="navbar">
-		<script src="navbar.js"></script>
+		<script src="/js/navbar.js"></script>
 	</nav>
 
 	<div id="page">
