--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -20,7 +20,7 @@
 	    <img src="../banner1.png">
 	</header>
 	<nav id="navbar">
-	    <script src="navbar.js"></script>
+	    <script src="/js/navbar.js"></script>
 	</nav>
 	<div id="page">
 	    <div class="form">
