--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -19,15 +19,15 @@
 		    adminButton.appendChild(adminText);
 
 		    adminButton.classname = 'adminButton';
-			adminButton.setAttribute('href', 'admin.html');
+			adminButton.setAttribute('href', '/admin');
 			adminButton.setAttribute('class', 'other');
 
 		    let nav = document.getElementsByTagName('nav')[0];
 		    nav.appendChild(adminButton);
                 }
             </script>
-		<a href="main.html" class="other">Home</a>
-		<a href="account.html" class="other">My Account</a>
+		<a href="/home" class="other">Home</a>
+		<a href="/manageaccount" class="other">My Account</a>
 		<a href="/logout" class="logout">Log Out</a>
 	</nav>
 
