--- a/src/main/resources/public/html/profilePage.html
+++ b/src/main/resources/public/html/profilePage.html
@@ -9,8 +9,8 @@
 	    <img src="../banner1.png">
 	</header>
 	<nav>
-	    <a href="main.html" class="other">Home</a>
-	    <a href="account.html" class="other">My Account</a>
+	    <a href="/home" class="other">Home</a>
+	    <a href="/manageaccount" class="other">My Account</a>
 	    <a href="/logout" class="logout">Log Out</a>
 	</nav>
 	<div id="page">
