--- a/src/main/resources/public/html/profilePage.html
+++ b/src/main/resources/public/html/profilePage.html
@@ -9,9 +9,7 @@
 	    <img src="../banner1.png">
 	</header>
 	<nav>
-	    <a href="/home" class="other">Home</a>
-	    <a href="/manageaccount" class="other">My Account</a>
-	    <a href="/logout" class="logout">Log Out</a>
+	    <script src="../js/navbar.js"></script>
 	</nav>
 	<div id="page">
 	    <div id="titlebar">
