Admin delete post created

--- a/src/main/resources/public/html/admin.html
+++ b/src/main/resources/public/html/admin.html
@@ -16,30 +16,19 @@
 	<div id="page">
 	    <div class="bodyDiv">    
 		<div class="userList">
-		    <table class="userTable">
-			<tr>
-			    <td><a href="">Username</a></td>
-			</tr>
-			<tr>
-			    <td><a href="">Username</a></td>
-			</tr>
+		    <table class="userTable" id="userTable">
+			
 		    </table>
 		</div>
 		<div class="postsList">
-		    <table class="postsTable">                    
-			<tr>
-			    <td class="postTitle"><a href="">Post Title</a></td>
-			    <td class="postAuthor"><a href="">Author</a></td>
-			    <td class="replyNbr">Replies</td>
-			</tr>
-			<tr>
-			    <td class="postTitle"><a href="">Post Title</a></td>
-			    <td class="postAuthor"><a href="">Author</a></td>
-			    <td class="replyNbr">Replies</td>
-			</tr> 
+		    <table class="postsTable" id="postsTable">                    
+			
+			
 		    </table>
 		</div>
 	    </div>
 	</div>
     </body>
+    
+    <script type="text/javascript" src="../js/admin.js"></script>
 </html>
