--- a/src/main/resources/public/html/createAccount.html
+++ b/src/main/resources/public/html/createAccount.html
@@ -135,7 +135,7 @@
 			</div>
 			<hr />
 			<div class="buttons" style="margin-bottom: 0;">
-			    <a href="login.html">Cancel</a><input type="submit" value="Create">
+			    <a href="/login">Cancel</a><input type="submit" value="Create">
 			</div>
 		    </fieldset>
 		</form>
