added more error prompts

--- a/src/main/resources/public/html/createPost.html
+++ b/src/main/resources/public/html/createPost.html
@@ -43,7 +43,6 @@
 			</div>
 			<div class="buttons">
 			    <button type="button" onclick="window.history.back();">Cancel</button>
-			    <button type="button" onclick="parseInput()">Parse</button>
 			    <input type="submit" value="Post">
 			</div>
 		    </fieldset>
@@ -52,6 +51,7 @@
 	    <div id="output"></div>
 	</div>
     </body>
+    <script src="../js/createPost.js"></script>
 </html>
 
 
