fixed PoR is null

--- a/src/main/resources/public/html/postView.html
+++ b/src/main/resources/public/html/postView.html
@@ -26,8 +26,9 @@
 							replier (class)
 							replycontent (class)
 	    -->
-<!--
-	    <div id="postandreplies">
+
+		<div id="postandreplies"></div>
+		<!--
 			<div id="post">
 				<div id="posttitle">
 				How do I post to this website?
@@ -43,13 +44,13 @@
 				that. Can someone help me please?<br>Thanks</br></p>
 				</div>
 			</div>
-
 		-->
+
+
 			<script type="text/javascript" src="../js/postView-general.js"></script>
 			
 			
-			<div id="replyArea">
-			</div>
+			<div id="replyArea"></div>
 		<!--	
 			<div id="replies">
 				
