included javascript in post view reply page

--- a/src/main/resources/public/html/postViewReply.html
+++ b/src/main/resources/public/html/postViewReply.html
@@ -15,39 +15,40 @@
 
 	<div id="page">
 	    <div id="postandreplies">
+			<script src="../js/postReply.js"></script>
 			<!--
-		<div id="post">
-		    <div id="posttitle">
-			How do I post to this website?
-		    </div>
-		    <div id="postauthor">
-			By: IdontknowwhatImdoing28
-		    </div>
-		    <div id="postcontents">
-			<p>Hello</p>
-			<p>I would like to make a post to this website, but I am not entirely sure how to go about doing
-			that. Can someone help me please?<br>Thanks</br></p>
-		    </div>
-		</div>
-		<div id="replyform">
-		    <form action="/postViewReply" method="post">
-				<fieldset>
-					<div class="formheading">
-					Write a reply
-					</div>
-					<div class="formcontent">
-						<div class="textbox" id="textbox">
-							<textarea name="replycontent" id="replycontent"></textarea>
-							<script type="text/javascript" src="../js/replyPost.js"></script>
+			<div id="post">
+				<div id="posttitle">
+				How do I post to this website?
+				</div>
+				<div id="postauthor">
+				By: IdontknowwhatImdoing28
+				</div>
+				<div id="postcontents">
+				<p>Hello</p>
+				<p>I would like to make a post to this website, but I am not entirely sure how to go about doing
+				that. Can someone help me please?<br>Thanks</br></p>
+				</div>
+			</div>
+			<div id="replyform">
+				<form action="/postViewReply" method="post">
+					<fieldset>
+						<div class="formheading">
+						Write a reply
 						</div>
-					</div>
-					<div class="buttons">
-						<button type="button" class="cancel" onclick="window.history.back()">Cancel</button>
-						<input type="submit" value="Reply">
-					</div>
-				</fieldset>
-		    </form>
-		</div>
+						<div class="formcontent">
+							<div class="textbox" id="textbox">
+								<textarea name="replycontent" id="replycontent"></textarea>
+								<script type="text/javascript" src="../js/replyPost.js"></script>
+							</div>
+						</div>
+						<div class="buttons">
+							<button type="button" class="cancel" onclick="window.history.back()">Cancel</button>
+							<input type="submit" value="Reply">
+						</div>
+					</fieldset>
+				</form>
+			</div>
 	-->
 		</div>
 	</div>
