--- a/src/main/resources/public/html/admin.html
+++ b/src/main/resources/public/html/admin.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-	<title>You Have Control of Everything</title>
+	<title>Admin Page</title>
 	<link href="../css/page_layout.css" type="text/css" rel="stylesheet">
 	<link href="../css/admin_layout.css" type="text/css" rel="stylesheet">
     </head>
